رفع جميع التعديلات الأخيرة

--- a/public/css/arabic-rtl.css
+++ b/public/css/arabic-rtl.css
@@ -123,3 +123,10 @@ html[dir="rtl"] .fi-header-subheading {
     background-color: #eb6fab !important;
     color: #000000 !important;
 }
+
+
+
+main.fi-simple-main.my-16.w-full.bg-white.px-6.py-12.shadow-sm.ring-1.ring-gray-950\/5.dark\:bg-gray-900.dark\:ring-white\/10.sm\:rounded-xl.sm\:px-12.max-w-lg{
+    background-color: #eb6fab !important;
+    color: #000000 !important;
+}
